# sta-395-machine-learning

./: main.py  pyproject.toml
src/homeworks/: hw1.ipynb  hw3.ipynb
src/labs/: Lab2.ipynb  lab1.ipynb  lab3.ipynb  lab6.ipynb
