[project]
name = "intro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "numpy==1.24.3",
    "pandas==1.5.3",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.1",
]
